Implement reverse array