@@ -1,7 +1,7 @@
 | id | challenge | pattern | link | compile and run |
 |----|-----------|---------|------| --------------- |
 | 1  | valid palindrome | two pointers | [ValidPalindrome.java](ValidPalindrome.java) | `javac --release 22 --enable-preview ValidPalindrome.java && java --enable-preview ValidPalindrome` |
-| 2  | reverse an array | | | |
+| 2  | reverse an array | two pointers | [ReverseArray.java](ReverseArray.java) | `javac --release 22 --enable-preview ReverseArray.java && java --enable-preview ReverseArray` |
 | 3  | pair with given sum in a sorted array | | | |
 | 4  | move zeros to end of array | | | |
 | 5  | sum of three values | two pointers | [SumOfThree.java](SumOfThree.java) | `javac --release 22 --enable-preview SumOfThree.java && java --enable-preview SumOfThree` |
